# codie

./: .env.example  .gitignore  README.md  benchmark.md  benchmark.py  benchmark_results.json  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent/: cli.py  memory.py  memory_tools.py  prompt.py  reflection.py  server.py  tools.py
tests/: test_memory.py  test_memrl.py  test_prompt.py  test_tools.py
